[gd_scene load_steps=3 format=3 uid="uid://djk22k3j63p7n"]

[ext_resource type="Script" path="res://scripts/gameplay_scripts/fraction_sample_gameplay.gd" id="1_endvx"]
[ext_resource type="FontFile" uid="uid://baqxnk61g1qva" path="res://assets/fonts/PixelOperator8.ttf" id="2_5jy6y"]

[node name="FractionAdditionGameplay" type="Control"]
layout_mode = 3
anchor_left = 0.067
anchor_right = 0.465
anchor_bottom = 0.403
offset_left = 12.816
offset_top = 78.0
offset_right = -445.68
offset_bottom = -183.144
size_flags_horizontal = 4
script = ExtResource("1_endvx")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(216, 55)
zoom = Vector2(2.5, 2.5)

[node name="FirstFraction" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 60.0
offset_bottom = 40.0
scale = Vector2(1, 1.0098)

[node name="FractionOne" type="RichTextLabel" parent="FirstFraction"]
layout_mode = 0
offset_left = 12.0
offset_top = 3.0
offset_right = 41.0
offset_bottom = 57.0
theme_override_fonts/normal_font = ExtResource("2_5jy6y")

[node name="SecondFraction" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FractionTwo" type="RichTextLabel" parent="SecondFraction"]
layout_mode = 0
offset_left = 73.0
offset_top = 3.0
offset_right = 105.0
offset_bottom = 52.0
theme_override_fonts/normal_font = ExtResource("2_5jy6y")

[node name="Operation" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Operand" type="RichTextLabel" parent="Operation"]
layout_mode = 0
offset_left = 45.0
offset_top = 20.0
offset_right = 85.0
offset_bottom = 60.0
scale = Vector2(1.14578, 1.1842)
theme_override_fonts/normal_font = ExtResource("2_5jy6y")
text = "+"

[node name="EqualSign" type="RichTextLabel" parent="Operation"]
layout_mode = 0
offset_left = 103.0
offset_top = 20.0
offset_right = 116.0
offset_bottom = 39.0
theme_override_fonts/normal_font = ExtResource("2_5jy6y")
text = "="

[node name="Answer" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 1.0
offset_right = 58.0
offset_bottom = 41.0
pivot_offset = Vector2(19, 20)

[node name="NumeratorAnswer" type="LineEdit" parent="Answer"]
layout_mode = 0
offset_left = 107.0
offset_top = 7.0
offset_right = 281.0
offset_bottom = 38.0
scale = Vector2(0.344544, 0.426202)
theme_override_fonts/font = ExtResource("2_5jy6y")
placeholder_text = "Input answer"
caret_blink = true

[node name="DenominatorAnswer" type="LineEdit" parent="Answer"]
layout_mode = 0
offset_left = 107.0
offset_top = 32.0
offset_right = 287.0
offset_bottom = 63.0
scale = Vector2(0.344544, 0.426202)
theme_override_fonts/font = ExtResource("2_5jy6y")
placeholder_text = "Input answer"
caret_blink = true

[node name="SubmitAnswer" type="Button" parent="Answer"]
layout_mode = 0
offset_left = 176.0
offset_top = 18.0
offset_right = 301.0
offset_bottom = 49.0
scale = Vector2(0.409947, 0.469758)
theme_override_fonts/font = ExtResource("2_5jy6y")
text = "Submit Answer"

[node name="DisplayAnswer" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 285.0
offset_top = 1.0
offset_right = 325.0
offset_bottom = 41.0

[node name="UserAnswer" type="RichTextLabel" parent="DisplayAnswer"]
layout_mode = 0
offset_right = 159.0
offset_bottom = 91.0
theme_override_fonts/normal_font = ExtResource("2_5jy6y")
text = "Display if answer is right or wrong."

[connection signal="button_down" from="Answer/SubmitAnswer" to="." method="_on_submit_answer_button_down"]
